Added PatchRx case study(!) and updated small styling tweaks

--- a/ideo.html
+++ b/ideo.html
@@ -105,8 +105,8 @@
                 <h1 class="content-web emoji">💡</h1>
                 <div>
                     <h1 class="content-mobile">💡</h1>
-                    <h1 class="ideo-title">IDEO.<br>
-                    <span class="medium">CoLab Makeathon Winter 2018.</span></h1>
+                    <h1>IDEO.<br>
+                    <span class="medium ideo-title">CoLab Makeathon Winter 2018.</span></h1>
                 </div>
             </div>
         </div>
