--- a/patch.html
+++ b/patch.html
@@ -6,7 +6,7 @@
 <!-- HEAD -->
 <head id="top">
     <meta charset="UTF-8">
-    <title>GitHub · Zain Khoja</title>
+    <title>PatchRx · Zain Khoja</title>
     <meta name="Description" content="Zain Khoja is a designer and student at Cornell. He's currently a Design Systems Intern at GitHub.">
 
     <!-- Viewport -->
@@ -102,11 +102,11 @@
 
             <!-- Title -->
             <div class="title">
-                <h1 class="content-web emoji">🙀</h1>
+                <h1 class="content-web emoji">💊</h1>
                 <div>
-                    <h1 class="content-mobile">🙀</h1>
-                    <h1>GitHub.<br>
-                    <span class="medium github-title">Primer Design Systems Intern.</span></h1>
+                    <h1 class="content-mobile">💊</h1>
+                    <h1>PatchRx.<br>
+                    <span class="medium patch-title">Increasing medication adherence.</span></h1>
                 </div>
             </div>
         </div>
@@ -118,37 +118,37 @@
                 <div class="section summary-item">
                     <h5 class="subtitle">Overview</h5>
                     <p>
-                        Creating tools, documentation sites, and core components for Primer, GitHub’s open source design system.
+                        Designing core user experience, incentives, refill, and chat features to reward users for high medication adherence.
                     </p>
                 </div>
 
                 <div class="section summary-item">
                     <h5 class="subtitle">Roles</h5>
-                    <p>Design Systems Intern</p>
+                    <p>Product Designer</p>
                 </div>
 
                 <div class="section summary-item">
                     <h5 class="subtitle">Team</h5>
                     <p>
-                        <a href="http://broccolini.net" target="_blank" rel="noopener" class="link github-link">Diana Mounter</a>, Design Infrastructure Manager
+                        <a href="https://www.linkedin.com/in/andrewaertker/" target="_blank" rel="noopener" class="link patch-link">Andrew Aertker</a>, Co-founder
                     </p>
                     <p>
-                        <a href="http://emilybrick.me" target="_blank" rel="noopener" class="link github-link">Emily Brick</a>, Designer
+                        <a href="https://www.linkedin.com/in/gavin-buchanan/" target="_blank" rel="noopener" class="link patch-link">Gavin Buchanan</a>, Co-founder
                     </p>
                     <p>
-                        <a href="http://ashguillau.me" target="_blank" rel="noopener" class="link github-link">Ash Guillame</a>, Designer
+                        <a href="https://www.linkedin.com/in/michael-bryce-11a782a5/" target="_blank" rel="noopener" class="link patch-link">Michael Bryce</a>, Software Engineer
                     </p>
                     <p>
-                        <a href="http://primer.style/team" target="_blank" rel="noopener" class="link github-link">GitHub Primer Design Team</a>
+                        <a href="https://www.linkedin.com/in/nathan-dullea/" target="_blank" rel="noopener" class="link patch-link">Nathan Dullea</a>, Software Engineer
                     </p>
                 </div>
 
                 <div class="section summary-item">
                     <h5 class="subtitle">Timeline</h5>
-                    <p>June 2019 to August 2019</p>
+                    <p>April 2020 to May 2020 | Oct 2020 to Nov 2020</p>
                 </div>
             </div>
-            <img alt="GitHub prototyping pages" src="work/github/github-summary.png" class="img summary-section">
+            <img alt="PatchCap and PatchRx app" src="work/patch/patch-summary.png" class="img summary-section">
         </div>
     </div>
 
@@ -157,84 +157,73 @@
     <div class="c6">
         <div class="section">
             <h5 class="subtitle">Background</h5>
-            <h2 class="github-title">What is Primer?</h2>
+            <h2 class="patch-title">Adherence needs a boost.</h2>
             <p>
-                <a href="https://primer.style/" target="_blank" rel="noopener" class="link github-link">Primer is GitHub’s open source design system</a>, serving as a single source of truth for design resources, tooling, and guidelines. The team not only supports the way design components are used in products, but also their development and maintainence. Our team is also in charge of core UI, making sure that our sites are accessible and responsive.
+                <a href="https://getpatchrx.com/" target="_blank" rel="noopener" class="link patch-link">PatchRx</a> is a healthcare-technology company that helps patients take the right medication at the right time, and works with pharmacies to track daily adherence and identify trends in patience behavior. 
             </p>
             <br><br>
             <p>
-                During the course of my internship, I worked on several projects in progress as well as saw a couple projects to completion. Because of GitHub’s great open source culture, I’m happy that I can share some of these projects so soon.
+                Patients use the <a href="https://www.getpatchrx.com/patchcap/" target="_blank" rel="noopener" class="link patch-link">PatchCap</a> – a small, puck-like device that fits underneath your medicine bottle cap and automatically tracks medication as you take it – and can earn rewards for good adherence and connect with contacts to help each other stay healthy.
             </p>
         </div>
 
         <div class="section">
             <h5 class="subtitle">Problem</h5>
-            <h2 class="github-title">Low or high fidelity?</h2>
+            <h2 class="patch-title">People are forgetful.</h2>
             <p>
-                Prototyping is an essential part of the Product Designer workflow at GitHub. Given the nature of the product, most designers work heavily in Figma for exploration before moving directly into code to prototyping. However, the fidelity of Figma work among designers can differ drastically.
+                A common occurance for pharmacists is a returning patient who realizes they're out of medication and needs a refill. However, they were supposed to come in for a refill 2 weeks earlier. In many cases, forgetting to take medication can be life-threatening. Doctors and pharmacies know this and find it difficult to keep track of their patients' adherences over time.
             </p>
-            <img alt="low and high fidelity explorations" src="work/github/github-mockup-1.png" class="img shadow"> 
+            <br><br>
             <p>
-                While high fidelity prototypes allowed designers to use our UI components, sometimes these prototypes look too polished. Using high fidelity components also required designers to detach them if they wanted to explore new modifications. This process was limiting to creative freedom.
+                Reminder apps are a great way for patients to keep track of their medications but don't always work and leave healthcare providers in the dark about patient behavior. Patients want to take their medication on time so they can stay healthy, but they can't because:
             </p>
-            <br><br>    
-            <p>
-                On the other hand, low fidelity prototypes excelled at letting designers think about features at the highest level without being bound by details. However, moving from low fidelity tools like sticky notes to interactive prototypes was difficult since these sticky notes didn’t correlate to GitHub UI. This made developer handoff much more difficult.
-            </p>
-        </div>
-
-        <div class="section">
-            <h5 class="subtitle"></h5>
-            <h2 class="github-title">Our north star.</h2>
-            <p>
-                There's not been a consistent set of tools to explicitly state that a design is in it's beginning/rough stages. Designers often end up using our high fidelity components or finding different ways to make the UI look less ‘polished’ or final. We wanted a solution that would:
-            </p>
-            <br>
-            <p>
-                ✅ Reduce detaching<br>
-                ✅ Create a set of medium fidelity assets<br>
-                ✅ Create a starting point for new projects<br>
-                ✅ Allow explorations using GitHub UI
-            </p>
+            <br>    
+            <ol>
+                <li>They often forget (especially if they have contributing conditions).</li>
+                <li>There's often no form of accountability.</li>
+            </ol>
         </div>
 
         <div class="section">
             <h5 class="subtitle">Ideation</h5>
-            <h2 class="github-title">Creating classification.</h2>
+            <h2 class="patch-title">Choosing the right meds.</h2>
             <p>
-                The driving statement that pushed forward our ideation was that <strong>structure should be complemented with flexibility</strong>. In order to accomplish this, we came up with two different types of elements.
+                We researched several features to help keep users accountable to taking their medication including:
             </p>
-            <br><br>
+            <br>
+            <ul>
+                <li>Rewards based on adherence</li>
+                <li>Virtual chat in the form of a penguin (the team likes alliteration)</li>
+                <li>Connecting with contacts who also use the app</li>
+            </ul>
+            <img alt="Initial screens for three potential features" src="work/patch/patch-mockup-1.png" class="img">
             <p>
-                The <strong>components classification</strong> was given to elements that are smaller and resuable, just like the components being used in high fidelity prototypes – except this time in a lower fidelity. These elements aren’t meant to be changed, but can be hidden/removed. They visually resemble grayscale GitHub UI.
+                We wanted to prioritize the feature with the highest value as a relatively new app with growing user base.  Rewards inherently made the most sense since users would be automatically enrolled and the value of the feature would increase with time. Connecting with contacts would be the most attractive if we already had many connected users but proves less useful when there isn't a critical mass. Virtual chat would also help to keep users accountable but seemed more optional and intrusive relative to the rewards feature.
             </p>
-            <img alt="prototyping components" src="work/github/github-mockup-2.png" class="img">
-            <p>
-                The <strong>frames classification</strong> was given to elements that are larger and might be components in a high fidelity mockup. However, at the exploration stage, these elements are meant to be changed. They’re detached by default and sometimes have hidden elements for designers to show/hide based on the needed level of fidelity. Frames also might contain some of the components shown above.
-            </p>
-            <img alt="prototyping frames" src="work/github/github-mockup-3.png" class="img">
         </div>
 
         <div class="section">
             <h5 class="subtitle"></h5>
-            <h2 class="github-title">Getting feedback.</h2>
+            <h2 class="patch-title">Pushing out of network.</h2>
             <p>
-                After creating our initial prototyping pages, we asked the Product Design team for feedback on what would help them the most. We received some very valuable feedback that helped us improve the pages to a point where they could be most effectively used.
+                While rewards systems are great at developing brand loyalty and gamifying typically heavy interactions, we wanted to develop a system that would encourage solving the accountability problem rather than just giving away free stuff.
             </p>
-            <img alt="prototyping feedback" src="work/github/github-mockup-4.png" class="img shadow">
+            <br><br>
+            <p>
+                In our first iteration we focused on making sure that reward points were properly tied to adherence. Additionally, pharmacies found it useful to have a standardized rating system to incentivize patients with better rewards.
+            </p>
+            <img alt="Rewards overview and earning methods" src="work/patch/patch-mockup-2.png" class="img">
+            <p>
+                Going back to our initial ideas, we wanted to encourage users to also build out a network by spreading the word among friends. A simple gift-giving feature would create some reason for a friend of a user to join as well.
+            </p>
+            <img alt="User flow to gift rewards to buddies" src="work/patch/patch-mockup-3.png" class="img">
         </div>
 
         <div class="section">
             <h5 class="subtitle">Results & Metrics</h5>
-            <h2 class="github-title">See it yourself.</h2>
+            <h2 class="patch-title">Back the cap.</h2>
             <p>
-                The prototyping pages were a great experience in learning the workflow and asynchronous communication used within GitHub’s design team. You can check out the file below:
-            </p>
-            <br/>
-            <iframe class="img" style="border: none;" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FRfvQDIm4H4pRqiv7b1nHXZ%2Fprototyping-pages%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
-            <br/>
-            <p>
-                 If you’d like to know more about my other work at GitHub, please contact me and let’s grab some coffee.
+                Lots of internal discussions and process are left out of this case study out of courtesy. PatchRx is actively partnering with pharmacies around the country – <a href="https://www.getpatchrx.com/contact-patch/" target="_blank" rel="noopener" class="link patch-link">reach out for more info</a>!
             </p>
         </div>
     </div>
