--- a/respond.html
+++ b/respond.html
@@ -105,8 +105,8 @@
                 <h1 class="content-web emoji">🚨</h1>
                 <div>
                     <h1 class="content-mobile">🚨</h1>
-                    <h1 class="respond-title">Respond.<br>
-                    <span class="medium">HackMIT 2018.</span></h1>
+                    <h1>Respond.<br>
+                    <span class="medium respond-title">HackMIT 2018.</span></h1>
                 </div>
             </div>
         </div>
