--- a/starbucks.html
+++ b/starbucks.html
@@ -105,8 +105,8 @@
                 <h1 class="content-web emoji">☕</h1>
                 <div>
                     <h1 class="content-mobile">☕</h1>
-                    <h1 class="starbucks-title">Starbucks.<br>
-                    <span class="medium">For people, not machines.</span></h1>
+                    <h1>Starbucks.<br>
+                    <span class="medium starbucks-title">For people, not machines.</span></h1>
                 </div>
             </div>
         </div>
