Update PatchRx tagline

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div class="exp-content">
                     <img alt="PatchRx" src="work/patch/patch-logo.svg" class="patch-logo">
                     <h2>PatchRx</h2>
-                    <h5 class="medium">Taking your medication with joy (coming soon).</h5>
+                    <h5 class="medium">Taking your medication with joy.</h5>
                 </div>
             </div>
 <!--            </a>-->
