Link PatchRx block to page

--- a/index.html
+++ b/index.html
@@ -108,15 +108,13 @@
 <!--            </a>-->
         
             <!-- PatchRx -->
-<!--            <a href="">-->
-                <div class="hvr-float exp exp-patch">
+            <a href="patch"><div class="hvr-float exp exp-patch">
                 <div class="exp-content">
                     <img alt="PatchRx" src="work/patch/patch-logo.svg" class="patch-logo">
                     <h2>PatchRx</h2>
                     <h5 class="medium">Taking your medication with joy.</h5>
                 </div>
-            </div>
-<!--            </a>-->
+            </div></a>
         
             <!-- GitHub -->
             <a href="github"><div class="hvr-float exp exp-github">
