--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <h5 class="option selected">Work</h5>
                     <h5 class="option"><a href="about">About</a></h5>
                     <h5 class="option"><a href="travel">Travel</a></h5>
-                    <h5 class="option"><a href="resume">Resume</a></h5>
+                    <h5 class="option"><a href="zainkho-resume.pdf" aria-label="Zain Khoja reseume" target="_blank" rel="noopener">Resume ↗</a></h5>
                 </nav>
             </div>
 
