Updated for Ramp :-)

--- a/github.html
+++ b/github.html
@@ -96,7 +96,7 @@
                     <h5 class="option"><a href="/">Work</a></h5>
                     <h5 class="option"><a href="about">About</a></h5>
                     <h5 class="option"><a href="travel">Travel</a></h5>
-                    <h5 class="option"><a href="zainkho-resume.pdf" aria-label="Zain Khoja reseume" target="_blank" rel="noopener">Resume ↗</a></h5>
+                    <h5 class="option"><a href="zainkho-resume.pdf" aria-label="Zain Khoja reseume" target="_blank" rel="noopener">Resume</a></h5>
                 </nav>
             </div>
 
