--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <h5 class="option selected">Work</h5>
                     <h5 class="option"><a href="about">About</a></h5>
                     <h5 class="option"><a href="travel">Travel</a></h5>
-                    <h5 class="option"><a href="zainkho-resume.pdf" aria-label="Zain Khoja reseume" target="_blank" rel="noopener">Resume ↗</a></h5>
+                    <h5 class="option"><a href="zainkho-resume.pdf" aria-label="Zain Khoja reseume" target="_blank" rel="noopener">Resume</a></h5>
                 </nav>
             </div>
 
@@ -88,7 +88,7 @@
                 <div>
                     <h1 class="content-mobile">🖋️</h1>
                     <h1>Hello, I'm Zain.</h1>
-                    <h1 class="medium">Creating joy <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">@Cornell</a>, <a href="https://www.instagram.com/" target="_blank" rel="noopener" class="link ig-title">@Insta</a>.</h1>
+                    <h1 class="medium">Creating joy <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">@Cornell</a>, <a href="https://ramp.com/" target="_blank" rel="noopener" class="link ramp-title">@Ramp</a>.</h1>
                 </div>
             </div>
         </div>
@@ -96,21 +96,28 @@
 
     <main class="c12 content">
 
-            <!-- Instagram -->
-<!--            <a href="">-->
-                <div class="hvr-float exp exp-ig">
+            <!-- Ramp -->
+            <!--<a href="">--><div class="hvr-float exp exp-ramp">
                 <div class="exp-content">
-                    <img alt="Instagram" src="work/instagram/ig-logo.svg" class="ig-logo">
-                    <h2 class="white">Instagram</h2>
-                    <h5 class="medium white">A reel-y cool product (under NDA).</h5>
+                    <img alt="Ramp" src="work/ramp/ramp-logo.svg" class="logo">
+                    <h2>Ramp</h2>
+                    <h5 class="medium">Time is money. Save both.</h5>
                 </div>
-            </div>
-<!--            </a>-->
+            </div><!--</a>-->
+
+            <!-- Instagram -->
+            <!--<a href="">--><div class="hvr-float exp exp-ig">
+                <div class="exp-content">
+                    <img alt="Instagram" src="work/instagram/ig-logo.svg" class="logo">
+                    <h2 class="white">Instagram</h2>
+                    <h5 class="medium white">A reel-y cool product.</h5>
+                </div>
+            </div><!--</a>-->
         
             <!-- PatchRx -->
             <a href="patch"><div class="hvr-float exp exp-patch">
                 <div class="exp-content">
-                    <img alt="PatchRx" src="work/patch/patch-logo.svg" class="patch-logo">
+                    <img alt="PatchRx" src="work/patch/patch-logo.svg" class="logo">
                     <h2>PatchRx</h2>
                     <h5 class="medium">Taking your medication with joy.</h5>
                 </div>
@@ -119,7 +126,7 @@
             <!-- GitHub -->
             <a href="github"><div class="hvr-float exp exp-github">
                 <div class="exp-content">
-                    <img alt="GitHub logo" src="work/github/github-logo.svg" class="github-logo">
+                    <img alt="GitHub logo" src="work/github/github-logo.svg" class="logo github-logo">
                     <h2 class="white">GitHub</h2>
                     <h5 class="medium white">Should designers code?</h5>
                 </div>
@@ -133,7 +140,7 @@
                         <div class="starbucks-heat evaporate-2"></div>
                         <div class="starbucks-heat evaporate-3"></div>
                     </div>
-                    <img alt="coffee cup" src="work/starbucks/starbucks-logo.png" class="starbucks-logo">
+                    <img alt="coffee cup" src="work/starbucks/starbucks-logo.png" class="logo">
                     <h2 class="white">Starbucks</h2>
                     <h5 class="medium white">A solution to “omg I love your drink, what is it?”</h5>
                 </div>
@@ -171,19 +178,6 @@
                     </div>
                     <h2>IDEO</h2>
                     <h5 class="medium">Disrupting the hospital voicemail industry.</h5>
-                </div>
-            </div></a>
-
-            <!-- Respond -->
-            <a href="respond"><div class="hvr-float exp exp-respond">
-                <div class="exp-content">
-                    <div class="respond-logo-container">
-                        <img alt="iPhone outline" src="work/respond/respond-logo.svg" class="hvr-float respond-logo">
-                        <img alt="iPhone outline" src="work/respond/respond-logo.svg" class="hvr-float respond-logo">
-                        <img alt="iPhone outline" src="work/respond/respond-logo.svg" class="hvr-float respond-logo">
-                    </div>
-                    <h2>Respond</h2>
-                    <h5 class="medium">Prioritizing situations for first responders.</h5>
                 </div>
             </div></a>
 
