--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
                     <h5 class="option"><a href="/">Work</a></h5>
                     <h5 class="option selected">About</h5>
                     <h5 class="option"><a href="travel">Travel</a></h5>
-                    <h5 class="option"><a href="zainkho-resume.pdf" aria-label="Zain Khoja reseume" target="_blank" rel="noopener">Resume ↗</a></h5>
+                    <h5 class="option"><a href="zainkho-resume.pdf" aria-label="Zain Khoja reseume" target="_blank" rel="noopener">Resume</a></h5>
                 </nav>
             </div>
 
@@ -115,7 +115,7 @@
     <main class="c12 summary main">
         <div>
             <p>
-                I’m currently a student at <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">Cornell</a> studying Information Science. Most recently, I was a Product Design Intern at <a href="https://instagram.com" target="_blank" rel="noopener" class="link ig-link">Instagram</a>. I also previously worked as a Systems Designer Intern at <a href="https://primer.style/team" target="_blank" rel="noopener" style="color: #0366D6" class="link">GitHub</a>.
+                I’m currently a student at <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">Cornell</a> studying Information Science and an incoming Product Designer at <a href="https://ramp.com/" target="_blank" rel="noopener" class="link ramp-link">Ramp</a>. Most recently, I was a Product Design Intern at <a href="https://instagram.com" target="_blank" rel="noopener" class="link ig-link">Instagram</a>. I also previously worked as a Systems Designer Intern at <a href="https://primer.style/team" target="_blank" rel="noopener" style="color: #0366D6" class="link">GitHub</a>.
             </p><br>
             <p>
                 I learned my craft by working on <a href="http://unicreative.co/" target="_blank" rel="noopener" class="link">side projects</a> and guidance from some <a href="https://twitter.com/sahkho" target="_blank" rel="noopener" class="link">great mentors</a>. I also work with <a href="https://cornellappdev.com" target="_blank" rel="noopener" class="link">Cornell AppDev</a> to improve the quality of life for students on campus.
