--- a/about.html
+++ b/about.html
@@ -115,13 +115,13 @@
     <main class="c12 summary main">
         <div>
             <p>
-                I’m currently a student at <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">Cornell</a> studying Information Science and an incoming Product Designer at <a href="https://ramp.com/" target="_blank" rel="noopener" class="link ramp-link">Ramp</a>. Most recently, I was a Product Design Intern at <a href="https://instagram.com" target="_blank" rel="noopener" class="link ig-link">Instagram</a>. I also previously worked as a Systems Designer Intern at <a href="https://primer.style/team" target="_blank" rel="noopener" style="color: #0366D6" class="link">GitHub</a>.
+                I’m currently a Product Designer at <a href="https://ramp.com/" target="_blank" rel="noopener" class="link ramp-link">Ramp</a> based in New York City. I most recently graduated from <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">Cornell</a>. Before that, I was a Product Design Intern at <a href="https://instagram.com" target="_blank" rel="noopener" class="link ig-link">Instagram</a> and a Systems Designer Intern at <a href="https://primer.style/team" target="_blank" rel="noopener" style="color: #0366D6" class="link">GitHub</a>.
             </p><br>
             <p>
-                I learned my craft by working on <a href="http://unicreative.co/" target="_blank" rel="noopener" class="link">side projects</a> and guidance from some <a href="https://twitter.com/sahkho" target="_blank" rel="noopener" class="link">great mentors</a>. I also work with <a href="https://cornellappdev.com" target="_blank" rel="noopener" class="link">Cornell AppDev</a> to improve the quality of life for students on campus.
+                I learned my craft by working on side projects with friends and guidance from <a href="https://twitter.com/sahkho" target="_blank" rel="noopener" class="link">great mentors</a>. In my free time, I get my hopes up for the Dallas Mavericks or Cowboys winning a championship and drink sweet tea. I’m currently learning 3D design, reading about tech history, and <a href="https://letterboxd.com/zainkho/" target="_blank" rel="noopener" class="link">logging my favorite movies</a>. 
             </p><br>
             <p>
-                A proud Dallas native and sweet tea aficionado, I'm inspired by people from different walks of life and my own experiences exploring the unknown.
+                I'm inspired by people who seek happiness and create joy for others. If that sounds like you, <a href="mailto:zainkhoja7@gmail.com?subject=Chai!" target="_blank" rel="noopener" class="link">let's grab some chai</a>.
             </p>
         </div>
         <img alt="picture of Zain Khoja" src="zk-avi.jpg" class="avi">
@@ -129,7 +129,7 @@
     
     <footer class="c12 grid">
         <div class="c6-left">
-            <p>If you’re looking to work with me or want to grab some coffee, feel free to email me at <a href="mailto:znk4@cornell.edu?subject=Hey!" target="_blank" rel="noopener">znk4@cornell.edu</a>.</p>
+            <p>If you’re looking to work with me or want to grab some coffee, feel free to email me at <a href="mailto:zainkhoja7@gmail.com?subject=Hey!" target="_blank" rel="noopener">zainkhoja7@gmail.com</a>.</p>
         </div>
         <div class="social">
             <a href="https://twitter.com/zainkho" target="_blank" rel="noopener"><img alt="Twitter icon" src="icons/twitter.svg" class="icons"></a>
