--- a/travel.html
+++ b/travel.html
@@ -277,7 +277,7 @@
     
     <footer class="c12 grid">
         <div class="c6-left">
-            <p>If you’re looking to work with me or want to grab some coffee, feel free to email me at <a href="mailto:znk4@cornell.edu?subject=Hey!" target="_blank" rel="noopener">znk4@cornell.edu</a>.</p>
+            <p>If you’re looking to work with me or want to grab some coffee, feel free to email me at <a href="mailto:zainkhoja7@gmail.com?subject=Hey!" target="_blank" rel="noopener">zainkhoja7@gmail.com</a>.</p>
         </div>
         <div class="social">
             <a href="https://twitter.com/zainkho" target="_blank" rel="noopener"><img alt="Twitter icon" src="icons/twitter.svg" class="icons"></a>
