Updated home page!

--- a/about.html
+++ b/about.html
@@ -3,28 +3,28 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- HEAD -->
-<head id="top">
-    <meta charset="UTF-8">
-    <title>About · Zain Khoja</title>
-    <meta name="Description" content="Zain Khoja is a designer and student at Cornell. He's currently a Design Systems Intern at GitHub.">
+<!-- Head -->
+<head>
+    <meta charset='UTF-8'>
+    <title>Zain Khoja</title>
+    <meta name='description' content='Zain Khoja is a software (but also sometimes other stuff) designer'>
 
     <!-- Viewport -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <!-- CSS Links -->
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/hover-min.css">
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+
+    <!-- CSS -->
+    <link rel='stylesheet' href='css/style.css' type='text/css'>
 
     <!-- Javascript -->
     <!-- TBD TBD TBD -->
 
-    <!-- Webpage Icons -->
-    <link href="zk-favicon-light.ico" rel="icon" media="(prefers-color-scheme: light)">
-    <link href="zk-favicon-dark.ico" rel="icon" media="(prefers-color-scheme: dark)">
+    <!-- Favicons -->
+    <link href='zk-favicon-light.ico' rel='icon' media='(prefers-color-scheme: light)'>
+    <link href='zk-favicon-dark.ico' rel='icon' media='(prefers-color-scheme: dark)'>
+
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-89012104-2"></script>
+    <script async src='https://www.googletagmanager.com/gtag/js?id=UA-89012104-2'></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -33,13 +33,13 @@
       gtag('config', 'UA-89012104-2');
     </script>
 
-    <!-- Twitter Preview -->
-    <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:site" content="@zainkho"/>
-    <meta name="twitter:creator" content="@zainkho"/>
-    <meta name="twitter:title" content="Zain Khoja" />
-    <meta name="twitter:description" content="Zain Khoja is a designer and student at Cornell."/>
-    <meta name="twitter:image:src" content="https://zainkho.com/zk-screenshot.png"/>
+    <!-- Twitter preview -->
+    <meta name='twitter:card' content='summary_large_image'/>
+    <meta name='twitter:site' content='@zainkho'/>
+    <meta name='twitter:creator' content='@zainkho'/>
+    <meta name='twitter:title' content='Zain Khoja'/>
+    <meta name='twitter:description' content='Zain Khoja is a software (but also sometimes other stuff) designer'/>
+    <meta name='twitter:image:src' content='https://zainkho.com/zk-screenshot.png'/>
 </head>
 
 <body class="grid">
