Updated about page!

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!-- Head -->
 <head>
     <meta charset='UTF-8'>
-    <title>Zain Khoja</title>
+    <title>Home · Zain Khoja</title>
     <meta name='description' content='Zain Khoja is a software (but also sometimes other stuff) designer'>
 
     <!-- Viewport -->
@@ -19,8 +19,8 @@
     <!-- TBD TBD TBD -->
 
     <!-- Favicons -->
-    <link href='zk-favicon-light.ico' rel='icon' media='(prefers-color-scheme: light)'>
-    <link href='zk-favicon-dark.ico' rel='icon' media='(prefers-color-scheme: dark)'>
+    <link href='images/zk-favicon-light.ico' rel='icon' media='(prefers-color-scheme: light)'>
+    <link href='images/zk-favicon-dark.ico' rel='icon' media='(prefers-color-scheme: dark)'>
 
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -80,7 +80,7 @@
         </div>
 
         <!-- Tiles -->
-        <div class='row' id='tile-container'>
+        <div class='row content'>
 
             <!-- Headerliners -->
             <a href='https://ramp.com' target='_blank' rel='noopener' class='column tile tl'>
@@ -134,7 +134,6 @@
 
         </div>
     </main>
-
 
     <!-- Footer -->
     <footer class='row'>
