--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 <!-- Head -->
 <head>
     <meta charset='UTF-8'>
-    <title>Zain Khoja</title>
+    <title>About · Zain Khoja</title>
     <meta name='description' content='Zain Khoja is a software (but also sometimes other stuff) designer'>
 
     <!-- Viewport -->
@@ -19,8 +19,8 @@
     <!-- TBD TBD TBD -->
 
     <!-- Favicons -->
-    <link href='zk-favicon-light.ico' rel='icon' media='(prefers-color-scheme: light)'>
-    <link href='zk-favicon-dark.ico' rel='icon' media='(prefers-color-scheme: dark)'>
+    <link href='images/zk-favicon-light.ico' rel='icon' media='(prefers-color-scheme: light)'>
+    <link href='images/zk-favicon-dark.ico' rel='icon' media='(prefers-color-scheme: dark)'>
 
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -42,62 +42,90 @@
     <meta name='twitter:image:src' content='https://zainkho.com/zk-screenshot.png'/>
 </head>
 
-<body class="grid">
+<body class='column'>
     <!-- Header -->
-    <header class="c12">
-        <!-- Nav -->
-        <div class="hero">
-            <div class="header">
-                <a href="/"><img alt="Zain Khoja logo" src="zk-logo.svg" class="zk-logo"></a>
-                <h3 class="medium content-web">Zain Khoja</h3>
-                <nav class="nav">
-                    <h5 class="option"><a href="/">Work</a></h5>
-                    <h5 class="option selected">About</h5>
-                    <h5 class="option"><a href="travel">Travel</a></h5>
-                    <h5 class="option"><a href="zainkho-resume.pdf" aria-label="Zain Khoja reseume" target="_blank" rel="noopener">Resume</a></h5>
-                </nav>
-            </div>
-
-            <!-- Title -->
-            <div class="title">
-                <h1 class="content-web emoji">👋🏽</h1>
-                <div>
-                    <h1 class="content-mobile">👋🏽</h1>
-                    <h1>Hey there,</h1>
-                    <h1 class="medium">It's nice to meet you.</h1>
-                </div>
-            </div>
+    <header class='row'>
+        <!-- Line -->
+        <div class='column line-container'>
+            <div class='line' id='line-1'></div>
+            <div class='line' id='line-2'></div>
+            <div class='line' id='line-3'></div>
+            <div class='line' id='line-4'></div>
         </div>
+        <!-- Actions -->
+        <nav class='row'>
+            <a href='/' class='row button'>
+                <svg><use href="images/sprites.svg#home"></use></svg>
+                <span class='sh2'>Home</span>
+            </a>
+            <a class='row button' id='selected'>
+                <svg><use href="images/sprites.svg#bookmark"></use></svg>
+                <span class='sh2'>About</span>
+            </a>
+        </nav>
     </header>
-    
-    <main class="c12 summary main">
-        <div>
-            <p>
-                I’m currently a Product Designer at <a href="https://ramp.com/" target="_blank" rel="noopener" class="link ramp-link">Ramp</a> based in New York City. I most recently graduated from <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">Cornell</a>. Before that, I was a Product Design Intern at <a href="https://instagram.com" target="_blank" rel="noopener" class="link ig-link">Instagram</a> and a Systems Designer Intern at <a href="https://primer.style/team" target="_blank" rel="noopener" style="color: #0366D6" class="link">GitHub</a>.
-            </p><br>
-            <p>
-                I learned my craft by working on side projects with friends and guidance from <a href="https://twitter.com/sahkho" target="_blank" rel="noopener" class="link">great mentors</a>. In my free time, I get my hopes up for the Dallas Mavericks or Cowboys winning a championship and drink sweet tea. I’m currently learning 3D design, reading about tech history, and <a href="https://letterboxd.com/zainkho/" target="_blank" rel="noopener" class="link">logging my favorite movies</a>. 
-            </p><br>
-            <p>
-                I'm inspired by people who seek happiness and create joy for others. If that sounds like you, <a href="mailto:zainkhoja7@gmail.com?subject=Chai!" target="_blank" rel="noopener" class="link">let's grab some chai</a>.
-            </p>
-        </div>
-        <img alt="picture of Zain Khoja" src="zk-avi.jpg" class="avi">
-    </main>
-    
-    <footer class="c12 grid">
-        <div class="c6-left">
-            <p>If you’re looking to work with me or want to grab some coffee, feel free to email me at <a href="mailto:zainkhoja7@gmail.com?subject=Hey!" target="_blank" rel="noopener">zainkhoja7@gmail.com</a>.</p>
-        </div>
-        <div class="social">
-            <a href="https://twitter.com/zainkho" target="_blank" rel="noopener"><img alt="Twitter icon" src="icons/twitter.svg" class="icons"></a>
-            <a href="https://medium.com/@zainkho" target="_blank" rel="noopener"><img alt="Medium icon" src="icons/medium.svg" class="icons"></a>
-            <a href="https://linkedin.com/in/zainkho" target="_blank" rel="noopener"><img alt="LinkedIn icon" src="icons/linkedin.svg" class="icons"></a>
-        </div>  
 
-        <!-- Scroll To Top -->
-        <a href="#top" aria-label="scroll to top" class="content-web no-display scroll-to-top"></a>
+    <main class='column'>
+        <!-- Title -->
+        <div class='column' id='title'>
+            <h1>Thanks for saying hi</h1>
+            <p class='sh1' id='subtitle'>Here's a bit more about who I am</p>
+        </div>
+
+        <!-- Content -->
+        <div class='row' id='bio'>
+
+            <div class='column'>
+                <p class='p1'>
+                    As you probably saw on the home page, I'm a software designer. I currently live in New York City and work at Ramp.
+                </p>
+                <p class='p1'>
+                    Before that, I was at Cornell where I went to some classes but mostly <a href='https://bit.ly/IntroDPDSP20' target='_blank' rel='noopener'>taught classes about design</a> <span class='sh2'>[some talent pupils — <a href='https://tisealatise.webflow.io' target="_blank" rel='noopener'>1</a>, <a href='https://emilyromero.notion.site/emilyromero/Yello-My-name-is-Emily-8734e7293ccb416b8372d45523b801ef' target='_blank' rel='noopener'>2</a>]</span>. In my free time, I met great friends and mentors without whom I wouldn't be here today <span class='sh2'>[aforementioned mentors — <a href='https://twitter.com/sahkho' target='_blank' rel='noopener'>1</a>, <a href='https://hasque.com' target='_blank' rel='noopener'>2</a>, <a href='https://gk3.website' target='_blank' rel='noopener'>3</a>]</span>. If you want to learn more about me, feel free to check out some of my inspirations <span class='sh2'>[<a href='https://www.are.na/zain-khoja' target='_blank' rel='noopener'>1</a>, <a href='https://letterboxd.com/zainkho/' target='_blank' rel='noopener'>2</a>, <a href='https://zainkho.notion.site/54a75ae80c6145b1b0e663aa9f942fe7?v=1bc2ffcb55d04f6fba1689a1a9c48086&pvs=4' target='_blank' rel='noopener'>3</a>]</span>.
+                </p>
+                <p class='p1'>
+                    If you want to find me, look for places that 1) celebrate Dallas sports, 2) serve sweet tea, or 3) brew local coffee before 9am. I also love seeing cool stuff; if you have something to show, <a href='mailto:zainkhoja7@gmail.com?subject=Look I made something cool...!' target='_blank' rel='noopener'>shoot me a message</a>.
+                </p>
+            </div>
+
+            <img alt="avatar" src="images/zk-avi.png" id="avi">
+
+        </div>
+    </main>
+
+    <!-- Footer -->
+    <footer class='row'>
+        <!-- Logo -->
+        <a href='/'><svg id='zk-logo'>
+            <defs>
+                <!-- Definition for inset shadow that is used for zk-logo above -->
+                <filter id='inset' x='0' y='0' width='40' height='41' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'>
+                    <feFlood flood-opacity='0' result='BackgroundImageFix'/>
+                    <feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/>
+                    <feColorMatrix in='SourceAlpha' type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha'/>
+                    <feOffset dy='1'/>
+                    <feGaussianBlur stdDeviation='0.5'/>
+                    <feComposite in2='hardAlpha' operator='arithmetic' k2='-1' k3='1'/>
+                    <feColorMatrix type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0'/>
+                    <feBlend mode='normal' in2='shape' result='effect1_innerShadow_946_14435'/>
+                </filter>
+            </defs>
+            <use href="images/sprites.svg#zk-logo" filter='url(#inset)'></use>
+        </svg></a>
+        <!-- Links -->
+        <nav class="row">
+            <a href='https://twitter.com/zainkho' target='_blank' rel='noopener' class='row button'>
+                <svg><use href="images/sprites.svg#twitter"></use></svg>
+            </a>
+            <a href='https://linkedin.com/in/zainkho' target='_blank' rel='noopener' class='row button'>
+                <svg><use href="images/sprites.svg#linkedin"></use></svg>   
+            </a>
+            <a href='zainkho-resume.pdf' target='_blank' rel='noopener' class='row button'>
+                <svg><use href="images/sprites.svg#briefcase"></use></svg>
+            </a>
+        </nav>
     </footer>
 </body>
+
+</html>
 
 </html>
